# docs.px.dev

./: .arcconfig  .arclint  .eslintrc.json  .gitignore  .snyk  BUILD.bazel  CLA.md  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  README.md  available-languages.js  config.js  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  netlify.toml  nginx.conf  package-lock.json  package.json  tsconfig.json  update_docs.sh
.github/ISSUE_TEMPLATE/: bug-report.md  content-issue.md  content-request.md
content/about-pixie/: 02-how-pixie-works.md  index.md
content/en/01-about-pixie/: 01-what-is-pixie.md  02-data-sources.md  03-pixie-ebpf.md  03-roadmap.md  04-architecture.md  04-faq.md  04-roadmap.md  05-faq.md  05-roadmap.md  06-faq.md  06-troubleshooting.md  index.md
content/en/02-installing-pixie/: 01-requirements.md  index.md
content/en/03-using-pixie/: 01-using-live-ui.md  02-using-cli.md  03-api-quick-start.md  index.md
content/en/04-tutorials/: index.md
content/en/05-reference/: 02-architecture.md  index.md
content/en/05-use-case-tutorials/: database-query-profiling.md  index.md  infra-health.md  network-monitoring.md
content/en/about-pixie/: 01-what-is-pixie.md  03-data-sources.md  03-observability.md  04-roadmap.md  05-faq.md  05-product-faqs.md  index.md
content/en/installing-pixie/: 01-requirements.md  02-quick-start.md  06-updating-pixie.md  (+3 more)
content/installing-pixie/: 02-quick-start.md  05-data-transfer-mode.md  index.md
content/tutorials/: 02-distributed-bpftrace-deployment.md  06-slackbot-alert.md  08-grafana.md  index.md
scripts/: datatable_docstrings.go  update_datatable_docs.sh
src/: GithubLink.tsx  YoutubeEmbed.tsx  functionPageUrl.ts  global.css  webpack-loaders.d.ts
src/apollo/: client.ts
src/components/: Header.tsx  NextPrevious.tsx  cloudLinkProvider.tsx  container.ts  footer-links.tsx  footer.tsx  heading.ts  image-zoom-modal.plugin.ts  index.ts  layout.tsx  link.tsx  mainThemeProvider.tsx  notification.ts  parseMd.tsx  rightSidebar.tsx  search-context.tsx  search-results-dropdown.tsx  seo.tsx  styles.css  tabSwitcherProvider.tsx  theme.ts  utils.ts
src/pages/: 404.tsx  index.tsx  search.tsx
src/plugins/: gatsby-plugin-code-tabs.ts
src/templates/: datatableDocs.tsx  datatableDocsIndex.tsx  docs.tsx  mutationDocs.tsx  pxlObjectIndex.tsx  pyDocsIndex.tsx  udfDocs.tsx  udfDocsIndex.tsx
src/utils/: algolia-queries.ts  parseUdf.ts
tools/licenses/: checker.py
tools/no-potrace/: index.js  package.json
(+217 files in other folders)
